tests/baselines/reference/parserMemberAccessExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(3,7): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(4,7): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(1,1): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(2,1): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(3,1): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(3,5): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(4,1): error TS2304: Cannot find name 'Foo'.
tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts(4,5): error TS2304: Cannot find name 'T'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserMemberAccessExpression1.ts (8 errors) ====
    Foo<T>();
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
    Foo.Bar<T>();
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
    Foo<T>.Bar();
          ~
!!! error TS1109: Expression expected.
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
        ~
!!! error TS2304: Cannot find name 'T'.
    Foo<T>.Bar<T>();
          ~
!!! error TS1109: Expression expected.
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
        ~
!!! error TS2304: Cannot find name 'T'.
    